[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowcept"
version = "0.5.3"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "omegaconf",
    "msgpack",
    "redis",
    "psutil",
    "py-cpuinfo",
    "pymongo",
    "requests",
    "flask_restful",
    "dask[distributed]",
    "watchdog",
    "SQLAlchemy",
    "pika",
    "tbparse"
]
authors = [{name = "Oak Ridge National Laboratory"}]
description = "Capture and query workflow provenance data using data observability"
readme = "README.md"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]
keywords = [
    "ai",
    "ml",
    "machine-learning",
    "provenance",
    "lineage",
    "responsible-ai",
    "databases",
    "big-data",
    "provenance",
    "tensorboard",
    "data-integration",
    "scientific-workflows",
    "dask",
    "reproducibility",
    "workflows",
    "parallel-processing",
    "lineage",
    "model-management",
    "mlflow",
    "responsible-ai",
    "data-analytics"
]

[project.urls]
GitHub = "https://github.com/ORNL/flowcept"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "torch",
    "torchvision",
    "numpy",
    "scipy",
    "mlflow-skinny",
    "tensorflow",
    "tensorboard",
    "alembic",
    "seaborn",
    "plotly",
    "scipy",
    "jupyterlab",
    "nbmake",
    "confluent-kafka"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["E501", "D"]
ignore = ["D200", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
